[gd_scene load_steps=5 format=3 uid="uid://dijiulsu0xh5q"]

[ext_resource type="Script" path="res://Scripts/Enemy/enemy.gd" id="1_1hqhs"]
[ext_resource type="Texture2D" uid="uid://bfwxbcsn2ecaa" path="res://Assets/Elf.png" id="1_qdh3v"]
[ext_resource type="Resource" uid="uid://cany8ud00n0kd" path="res://Scenes/Enemies/Enemy1Stats.tres" id="2_rjd5d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u8lcp"]
radius = 10.4403

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_1hqhs")
stats = ExtResource("2_rjd5d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_u8lcp")

[node name="Elf" type="Sprite2D" parent="."]
texture = ExtResource("1_qdh3v")

[node name="StunTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.5

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0

[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
